# fdr-finder

./: .gitignore  .gitpod.yml  Dockerfile  README.md  authors.metadata.json  build.sh  deployment.yml  podcastFeeds.metadata.json  podcastTagGroups.metadata.json  podcastTranscripts.metadata.json  run.sh  urlTypes.metadata.json
.github/: prod-ci.yml
.github/workflows/: dev-ci.yml  prod-ci.yml
client/: jest.config.ts  package-lock.json  package.json  tslint.json  webpack.config.ts
client/src/: api.ts  app.tsx  constants.ts  dataNode.ts  example.test.tsx  helper.ts  screenshot.test.ts  zoomableSunburstData.ts
client/src/components/: ZoomableIcicle.tsx  advancedSearchMenu.tsx  audioPlayer.tsx  d3Example.tsx  searchBar.tsx  showCard.tsx  zoomableCirclePacking.tsx  zoomableIcicle.tsx  zoomableSunburst.tsx
client/src/helper/: secondsToDurationString.test.ts  secondsToDurationString.ts  tagFormatting.test.ts  tagFormatting.ts
client/src/pages/: circlePackingPage.tsx  iciclePage.tsx  notFoundPage.tsx  podcastPage.tsx  searchPage.tsx  sunburstPage.tsx
client/src/scripts/: speechToText.ts
mongo_dump/: authors.bson  podcastFeeds.bson  podcastTags.bson  podcastTags.metadata.json  podcasts.metadata.json  tagCounts.bson  tagCounts.metadata.json  urlTypes.bson
server/: Cargo.toml  Rocket.toml
server/src/: environment.rs  fdrDatabase.rs  fdr_cache.rs  fdr_database.rs  http.rs  main.rs  mock.rs  podcast.rs  sonic.rs
server/src/search/: cache.rs  meilisearch.rs  mock.rs  mod.rs  sonic.rs
