[package]
name = "fdr-show-indexer-server"
version = "0.1.0"
authors = ["Tommy Volk <tvolk131@gmail.com>"]
edition = "2018"

[dependencies]
chrono          = "0.4.19"
hex             = "0.4.3"
lru             = "0.6.6"
meilisearch-sdk = { version = "0.9.0", features = ["sync"] }
reqwest         = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
rocket          = "0.5.0-rc.1"
rss             = "1.10.0"
serde           = { version = "1.0.130", features = ["derive"] }
serde_json      = "1.0.68"
sha2            = "0.9.8"
tokio           = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
url             = "2.2.2"