[package]
name = "fdr-show-indexer-server"
version = "0.1.0"
authors = ["Tommy Volk <tvolk131@gmail.com>"]
edition = "2018"

[dependencies]
chrono          = "0.4.19"
dashmap         = "5.0.0"
hex             = "0.4.3"
lru             = "0.7.0"
meilisearch-sdk = { version = "0.13.0", features = ["sync"] }
reqwest         = { version = "0.11.7", default-features = false, features = ["json", "rustls-tls"] }
rocket          = "0.5.0-rc.1"
rss             = "2.0.0"
serde           = { version = "1.0.131", features = ["derive"] }
serde_json      = "1.0.72"
sha2            = "0.10.0"
tokio           = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }
url             = "2.2.2"